--- a/templates/current-weather.hbs
+++ b/templates/current-weather.hbs
@@ -1,1 +1,4 @@
-<h1>The current temperature is: {{ temperature }}</h1>
+<h1>The current temperature is: {{temperature}}</h1>
+{{#if summary}}
+<h2>The current weather is: {{summary}}</h2>
+{{/if}}
